# Ludix

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeOptions.txt
Code/: CMakeLists.txt  ecs.c  ecs.h  ecs_types.h  file.c  file.h  input.h  log.h  ludix.c  ludix.h  renderer.h  types.h  window.h
Code/Math/: matrix.c  matrix.h  vector.h
Code/Platform/: platform_glfw.c
Code/Renderer/: mesh.h  shader.h
Code/Renderer/Backend/: backend_opengl.c
Examples/: CMakeLists.txt  basic_application.c
Examples/Resources/Shaders/: Main.frag
ext/glad/: CMakeLists.txt
ext/glad/glad/: gl.h
src/: CMakeLists.txt  core.c  ldgl.h  ludix.h
src/platform/: platform_glfw.c
src/platform/internal/: core.h
